--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 
 [build]
-  publish = "dist" 
-  functions = "netlify/functions"
+  functions = "functions"
+  publish = "dist"
 
 [functions]
   node_bundler = "esbuild"
