--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,4 @@
 
 [build]
-  functions = "functions"
+  functions = "netlify/functions"
   publish = "dist"
-
-[functions]
-  node_bundler = "esbuild"
